# Mufi-Lang

./: .gitignore  .versionrc.json  CHANGELOG  LINE_COUNT.txt  Makefile  README.md  VERSION  debug_prod.py  mufi  package-lock.json  package.json  test.mufi
doc/: book.toml
doc/mufiDocs/: Cargo.toml
doc/mufiDocs/src/: main.rs
doc/std/: book.toml
doc/std/src/: SUMMARY.md  chapter_1.md  conv.md  files.md  index.md  math.md  os.md  string.md
doc/std/src/man/: mufi.1.man  mufi.1.md
doc/toml/: conv.toml  files.toml  math.toml  os.toml  string.toml
mufi_stdlib/: Cargo.toml
mufi_stdlib/src/: lib.rs
src/: Cargo.toml  build.rs  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  main.c  memory.c  memory.h  object.c  object.h  pre.c  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h  vm_bench.c
src/benches/: mufi_benchmark.rs
src/src/: bindings.rs  lib.rs
src/stdlib/: conv.c  conv.h  files.c  files.h  math_.c  math_.h  os.c  os.h  stdlib.c  stdlib.h  string.c  string.h
src/test/: classes.mufi  closures.mufi  fibonacci.mufi
utils/: debug_prod.py  setup.py  test.py
