[package]
name = "mufi_bench"
version = "0.1.0"
edition = "2021"
description = "Mufi Compiler using Rust FFI bindings, only used for benchmarking purposes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
cc = "1.0.73"
bindgen = "0.60.1"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "mufi_benchmark"
harness = false